# template-pyproject

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  Taskfile.yml  manage.py  pyproject.toml
{{cookiecutter.project_name}}/.github/actions/release/: action.yml
{{cookiecutter.project_name}}/.github/actions/setup-ansible/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: deploy.yml  release.yml
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/assets/: build.js  package.json  tailwind.config.js
{{cookiecutter.project_name}}/assets/css/: components.css  layouts.css  main.css
{{cookiecutter.project_name}}/assets/js/: globals.d.ts  main.ts  modals.ts  toasts.ts
{{cookiecutter.project_name}}/deploy/: Vagrantfile
{{cookiecutter.project_name}}/deploy/ansible/: .gitignore  Taskfile.yml  ansible.cfg  deploy.yml  hosts.ini  variables.yml  vault.yml
{{cookiecutter.project_name}}/deploy/ansible/roles/deploy/tasks/: main.yml
{{cookiecutter.project_name}}/deploy/terraform/: Taskfile.yml  main.tf  outputs.tf
{{cookiecutter.project_name}}/tests/: conftest.py  database.py  factories.py
{{cookiecutter.project_name}}/tests/accounts/: test_login.py  test_password_reset.py  test_profile.py  test_registration.py  test_social.py
{{cookiecutter.project_name}}/tests/manager/: conftest.py
{{cookiecutter.project_name}}/tests/manager/dashboard/: test_dashboard.py
{{cookiecutter.project_name}}/tests/manager/teams/: test_teams.py
{{cookiecutter.project_name}}/tests/onboarding/: test_membership_invitation.py
{{cookiecutter.project_name}}/tests/organizations/: test_switcher.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __main__.py  admin.py  celery.py  console.py  healthcheck.py  main.py  metrics.py  tasks.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/: admin.py  commands.py  passwords.py  rate_limit.py  routes.py  validators.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/authentication/: exceptions.py  forms.py  user_checks.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/password_reset/: forms.py  mails.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/profile/: forms.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/registration/: actions.py  forms.py  mails.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/social/: views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/templates/accounts/: layout.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/base/: datatables.py  forms.py  http.py  localization.py  menu.py  storages.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/base/storages/: __init__.py  commands.py  factories.py  uploads.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/commands/: settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/config/: database.py  dependencies.py  errors.py  mails.py  middleware.py  routes.py  sentry.py  settings.py  templating.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/locales/: messages.pot
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/locales/ru/LC_MESSAGES/: messages.po
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/manage/: depedencies.py  routes.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/manage/dashboard/: views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/manage/teams/: forms.py  mails.py  tables.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/manage/templates/manage/: layout.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/models/: customers.py  organizations.py  users.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/onboarding/: routes.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/onboarding/member/: views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/organizations/: context_processors.py  forms.py  middleware.py  service.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/organizations/templates/organizations/: new.html  select.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/subscriptions/: admin.py  commands.py  features.py  models.py  packages.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/: base.html  components.html  landing.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/legal/: privacy_policy.html  terms.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/lib/: alerts.html  badges.html  forms.html  pagination.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/mail/: base_mail.html
(+17 files in other folders)
